Add route53 record for api

--- a/terraform.tfvars.sample
+++ b/terraform.tfvars.sample
@@ -1,1 +1,8 @@
-on_premise_public_ip = "Public_IP"
+on_premise_public_ip  = "Public_IP"
+on_premise_cidr_block = "192.168.20.0/24"
+ocp_cluster_name      = "ocp4"
+ocp_domain_name       = "<OPENSHIFT_BASE_DOMAIN>"
+ocp_lb_ip             = "192.168.20.1"
+db_username           = "db_user"
+db_password           = "db_password"
+db_name               = "db_name"
